0414 close #51 fix z-index of site-footer

--- a/lib-for-link/src/global-header/go-top/go-top.less
+++ b/lib-for-link/src/global-header/go-top/go-top.less
@@ -1,54 +1,47 @@
 /**
- * @author Pulipuli Chen 20190305
- * 其實都還沒整理，亂成一團啊
+ * @author Pulipuli Chen 20190414
+ * Restructed finished
  */
-
-#footer .go-top {
-	float: right;
-	margin-left: 20px;
-	padding-left: 20px;
-	/*border-left: 1px solid rgba(0, 0, 0, 0.1)*/
-}
-
-#footer .go-top a {
-	display: block;
-	width: 30px;
-	height: 30px;
-	color: #fff;
-	font-size: 14px;
-	text-align: center;
-	border-radius: 2px;
-	background-color: #F46B6B;
-	transition: background-color 0.2s ease-in-out;
-	-moz-transition: background-color 0.2s ease-in-out;
-	-webkit-transition: background-color 0.2s ease-in-out;
-	-o-transition: background-color 0.2s ease-in-out
-}
-
-#footer .go-top a:hover {
-	background-color: #444
-}
-
-#footer .go-top a i {
-	line-height: 30px
-}
-
-
-
-#footer .go-top {
+.site-footer #footer .go-top {
+  float: right;
+  margin-left: 20px;
+  padding-left: 20px;
+  /*border-left: 1px solid rgba(0, 0, 0, 0.1)*/
   position: fixed;
   right: 20px;
   bottom: calc(50px + 1em);
   z-index: 999;
   border-left-width: 0 !important;
-  
+
   a {
+    display: block;
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 2px;
+    background-color: #F46B6B;
+    transition: background-color 0.2s ease-in-out;
+    -moz-transition: background-color 0.2s ease-in-out;
+    -webkit-transition: background-color 0.2s ease-in-out;
+    -o-transition: background-color 0.2s ease-in-out;
+
     background-color: #AD7518;
     -moz-box-shadow: 2px 2px 3px rgba(20%,20%,40%,0.5);
     -webkit-box-shadow:2px 2px 3px rgba(20%,20%,40%,0.5);
     box-shadow:2px 2px 3px rgba(20%,20%,40%,0.5);
     /*margin-bottom: 0.5em;*/
   }
+
+  a:hover {
+    background-color: #444
+  }
+
+  a i {
+    line-height: 30px
+  }
+
   .goto-comment {
     display: none;
     margin-top: 0.5em;
