--- a/lib-for-link/src/global-header/style/footer.less
+++ b/lib-for-link/src/global-header/style/footer.less
@@ -1,15 +1,23 @@
-#footer {
-	line-height: 30px;
-	padding: 10px 0 0px 0;
-	background-color: #1a1a1a
+.site-footer #footer {
+  line-height: 30px;
+  padding: 10px 0 0px 0;
+  background-color: #1a1a1a;
+
+  p {
+    font-size: 13px;
+    float: left;
+    line-height: 30px
+  }
+
+  a {
+    color: #F57676;
+  }
+  
+  .go-top {
+    color: white;
+  }
 }
 
-#footer p {
-	font-size: 13px;
-	float: left;
-	line-height: 30px
-}
-
-#footer a {
-	color: #F57676
+.site-footer#colophon {
+  z-index: 0;
 }
